kubernetes/base/kube-system/cilium/networks.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.32.1/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: kube-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: k8s.${SECRET_DOMAIN}
    io.cilium/lb-ipam-ips: ${CLUSTER_API_ADDR}
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - port: 6443
